# mango-egui

./: Cargo.toml  README.md
src/: file.rs  info_bar.rs  lib.rs
