[package]
name = "mango-egui"
description = "My egui widgets"
repository = "https://github.com/ripe-mangos/mango-egui"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "0.20.1", default-features = false }
rfd = { version = "0.10.0", optional = true }

[features]
default = ["file"]

file = ["dep:rfd"]
